--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,10 @@
       href="https://fonts.googleapis.com/css2?family=Fuzzy+Bubbles:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Angkor&display=swap"
+      rel="stylesheet"
+    />
     <title>Hello</title>
   </head>
   <body>
